kubernetes/nexus/nexusdeployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nexus
  namespace: nexus
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nexus
  template:
    metadata:
      labels:
        app: nexus
    spec:
      nodeSelector:
        env: prod
      containers:
        - name: nexus
          image: sonatype/nexus3:latest
          ports:
            - containerPort: 8081
          volumeMounts:
            - mountPath: /nexus-data
              name: nexus-emptydir
      volumes:
        - name: nexus-emptydir
          emptyDir: {}
