kubernetes/nexus/nexusservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: nexus-service
  labels:
    app: nexus
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 8081
      nodePort: 30001
  selector:
    app: nexus
