kubernetes/nexus/nexusingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nexus-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /nexus
    kubernetes.io/ingress.class: nginx
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /nexus
        pathType: Prefix
        backend:
          service:
            name: nexus-service
            port:
              number: 80
